# docs/swagger.yaml
@@ -1,22 +1,25 @@
 definitions:
-  dto.ChatMessageRequest:
+  smart-chat_internal_dto.ChatMessageRequest:
     properties:
       chat_id:
         type: integer
       question:
         type: string
+      question_date:
+        type: string
+      response:
+        type: string
+      response_date:
+        type: string
+      response_id:
+        type: string
       user_id:
         type: string
     type: object
-  dto.ChatMessageResponse:
+  smart-chat_internal_dto.ChatMessageResponse:
     properties:
       answer:
         type: string
-    type: object
-  dto.ChatResponse:
-    properties:
-      chat_id:
-        type: integer
     type: object
 info:
   contact:
@@ -28,49 +31,6 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
 paths:
-  /smart-chat/v1/chat:
-    post:
-      consumes:
-      - application/json
-      description: create chat
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/dto.ChatResponse'
-        "500":
-          description: Internal Server Error
-          schema: {}
-      summary: create chat
-      tags:
-      - Action
-  /smart-chat/v1/chat-message:
-    post:
-      consumes:
-      - application/json
-      description: chat-message
-      parameters:
-      - description: chatMessageRequest
-        in: body
-        name: chatMessageRequest
-        required: true
-        schema:
-          $ref: '#/definitions/dto.ChatMessageRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/dto.ChatMessageResponse'
-        "500":
-          description: Internal Server Error
-          schema: {}
-      summary: chat-message
-      tags:
-      - Action
   /smart-chat/v1/health:
     get:
       consumes:
@@ -86,6 +46,45 @@ paths:
       summary: healthcheck router
       tags:
       - Healthcheck
+  /v1/chat:
+    post:
+      consumes:
+      - application/json
+      description: create chat
+      produces:
+      - application/json
+      responses:
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: create chat
+      tags:
+      - Action
+  /v1/chat-message:
+    post:
+      consumes:
+      - application/json
+      description: chat-message
+      parameters:
+      - description: chatMessageRequest
+        in: body
+        name: chatMessageRequest
+        required: true
+        schema:
+          $ref: '#/definitions/smart-chat_internal_dto.ChatMessageRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/smart-chat_internal_dto.ChatMessageResponse'
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: chat-message
+      tags:
+      - Action
 securityDefinitions:
   ApiKeyAuth:
     in: header
